--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@highcharts/map-collection": "^1.1.3",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "highcharts": "^9.3.1",
+    "highcharts-vue": "^1.4.0",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
+    "@mdi/font": "^6.4.95",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
